Resolved avatar spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -219,7 +219,15 @@ padding-top: 120px;
 .avatar {
   width: 16%;
   height: 16%;
+  padding-bottom: 72px;
 }
+
+@media (max-width: 767px) {
+  .avatar {
+  width: 24%;
+  height: 24%;
+     }
+  }
 
 
 .social {
